adding cursor pointer to item

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,5 @@
 body{
     font-size: 15px;
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 #search-container {
@@ -32,6 +30,9 @@ body{
 }
 #followers-container .followers-list ul .followers-item{
     margin-bottom: 15px;
+}
+#followers-container .followers-list ul .followers-item .media-body{
+    cursor: pointer;
 }
 #followers-container .followers-list ul .followers-item .media-body h5{
     margin-top: 5px;
