--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,8 @@ body{
 }
 #followers-container .followers-list ul .followers-item{
     margin-bottom: 15px;
+    min-height: 130px;
+    max-height: 130px;
 }
 #followers-container .followers-list ul .followers-item .media-body{
     cursor: pointer;
