--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,17 @@ body{
     border-radius: 5px;
 }
 
+.loader .loader-container {
+    margin: 0 auto;
+    clear: both;
+    float: none;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.loader .loader-container i{
+    font-size: 45px;
+}
+
 #search-form{
     padding: 10px;
 }
